--- a/.github/workflows/update_html.yml
+++ b/.github/workflows/update_html.yml
@@ -24,6 +24,11 @@ jobs:
         pip install requests tweepy youtube_dl
 
     - name: Run script
+      env:
+        CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+        CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+        ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+        ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
       run: |
         python generate_html.py
 
