--- a/.github/workflows/update_html.yml
+++ b/.github/workflows/update_html.yml
@@ -25,10 +25,7 @@ jobs:
 
     - name: Run script
       env:
-        CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
-        CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
-        ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-        ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+        BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
       run: |
         python generate_html.py
 
